# GameUtilities

./: .gitignore  .travis.yml  AABB_8cpp.html  AABB_8cpp__incl.map  AABB_8cpp__incl.md5  AABB_8h.html  AABB_8h__dep__incl.map  AABB_8h__dep__incl.md5  AABB_8h__incl.map  AABB_8h__incl.md5  AABB_8h_source.html  Attributes_2Base_8cpp.html  Attributes_2Base_8cpp__incl.map  Attributes_2Base_8cpp__incl.md5  Attributes_2Base_8h.html  Attributes_2Base_8h__dep__incl.map  Attributes_2Base_8h__dep__incl.md5  Attributes_2Base_8h__incl.map  Attributes_2Base_8h__incl.md5  Attributes_2Base_8h_source.html  Attributes_2Manager_8cpp.html  Attributes_2Manager_8cpp__incl.map  Attributes_2Manager_8cpp__incl.md5  Attributes_2Manager_8h.html  Attributes_2Manager_8h__dep__incl.map  Attributes_2Manager_8h__dep__incl.md5  Attributes_2Manager_8h__incl.map  Attributes_2Manager_8h__incl.md5  Attributes_2Manager_8h_source.html  Attributes_2Position_8cpp.html  Attributes_2Position_8cpp__incl.map  Attributes_2Position_8cpp__incl.md5  Attributes_2Position_8h.html  Attributes_2Position_8h__dep__incl.map  Attributes_2Position_8h__dep__incl.md5  Attributes_2Position_8h__incl.map  Attributes_2Position_8h__incl.md5  Attributes_2Position_8h_source.html  CMakeLists.txt  CTestConfig.cmake  (+1673 more)
doc/: CMakeLists.txt  Doxyfile.in  MainPage.h
examples/: CMakeLists.txt
examples/Algorithm/: CMakeLists.txt
examples/Algorithm/SAT/: CMakeLists.txt  Main.cpp
examples/Box2D/: CMakeLists.txt  Main.cpp
examples/Box2D/include/: CMakeLists.txt  ConvertCoords.h  DebugDraw.h  Debugging.h  MouseJoint.h  ObjectBase.h  TestState.h
examples/Box2D/src/: CMakeLists.txt  ConvertCoords.cpp  DebugDraw.cpp  MouseJoint.cpp  ObjectBase.cpp  TestState.cpp
examples/Core/: CMakeLists.txt  MacroExample.cpp  Main.cpp  ProgramArguments.cpp
examples/Data/: CMakeLists.txt  QuadTreeExample.cpp
examples/Engin/: CMakeLists.txt  Main.cpp
examples/Engin/include/: CMakeLists.txt  TestState.h
examples/Engin/src/: CMakeLists.txt  TestState.cpp
examples/EnginExample/: CMakeLists.txt  EnginExampleState.cpp  EnginExampleState.h  ExampleFrame.cpp  ExampleFrame.h  Main.cpp
examples/Event/: CMakeLists.txt  EventManagerExample1.cpp
examples/Log/: #Main.cpp#  CMakeLists.txt  Main.cpp
examples/Particle System/: CMakeLists.txt
examples/Particle System/Particle Example 1/: CMakeLists.txt  Main.cpp
examples/Window/: CMakeLists.txt  WindowExample.cpp
include/GameUtilities/Engin/: CMakeLists.txt  Engin.h  GameState.h
include/GameUtilities/Event/: CMakeLists.txt  ChangeState.h  Dispatcher.h  Event.h  EventHandler.h  EventQueue.h  Events.h  Id.h  Listener.h  Manager.h  MusicVolumeChanged.h  PlayMusic.h  PlaySound.h  Pop.h  PushState.h  SoundVolumeChanged.h
include/GameUtilities/FrameRate/: CMakeLists.txt  FrameRate.h
include/GameUtilities/Particle System/Attribute/: Attribute.h  CMakeLists.txt  Color.h  LifeSpan.h  Position.h  Velocity.h
libraries/: CMakeLists.txt
libraries/Engin/: CMakeLists.txt
libraries/Engin/include/: CMakeLists.txt
libraries/Engin/src/: CMakeLists.txt
libraries/Engin/src/GameUtilities/: CMakeLists.txt
libraries/Math/cmake/: MathConfig.cmake.in
libraries/Math/src/Math/: cVector.cpp
libraries/Math/test/: CMakeLists.txt
libraries/include/: CMakeLists.txt
libraries/include/GameUtilities/: CMakeLists.txt  RGBA.h
libraries/include/GameUtilities/Algorithm/: CMakeLists.txt
libraries/include/GameUtilities/Core/: '  CMakeLists.txt  FrameRate.h  Macros.h  NonCopyable.h  Paths.h  PreferencesManager.h  ProgramArguments.h  RAIIStream.h  Resource Holder.h  Resource.h  ResourceManager.h  String.h  Thread.h  ]
libraries/include/GameUtilities/Data/: AABB.h  CMakeLists.txt  PhysicsObject.h  QuadTree.h  RGBA.h  Rectangle.h
libraries/include/GameUtilities/Engin/: CMakeLists.txt  Engin.h  Frame.h  GameState.h  ]
libraries/include/GameUtilities/Event/: '  CMakeLists.txt  ChangeState.h  Click.h  Dispatcher.h  Event.h  EventHandler.h  EventId.h  EventManager.h  EventQueue.h  Events.h  Id.h  Listener.h  LogEvent.h  LogType.h  Manager.h  MessageEvent.h  MusicVolumeChanged.h  OnCheck.h  OnComboChanged.h  OnSliderChanged.h  PlayMusic.h  PlaySound.h  Pop.h  PushState.h  SoundVolumeChanged.h
libraries/include/GameUtilities/FrameRate/: CMakeLists.txt  FrameRate.h
libraries/include/GameUtilities/Log/: CMakeLists.txt  LogEntry.h  LogFileTarget.h  LogFormatter.h  LogManager.h  LogTarget.h  LogType.h
libraries/include/GameUtilities/Particle System/: CMakeLists.txt  Container.h  Particle.h
libraries/include/GameUtilities/ParticleSystem/: CMakeLists.txt  Container.h  Particle.h
libraries/include/GameUtilities/TP/: CMakeLists.txt  ThreadPool.h  ThreadQueue.h  ThreadTask.h
libraries/include/GameUtilities/Window/: CMakeLists.txt  Window.h  WindowBase.h  WindowX11.h
libraries/src/GameUtilities/: CMakeLists.txt
libraries/src/GameUtilities/Algorithm/: CMakeLists.txt
libraries/src/GameUtilities/Core/: CMakeLists.txt  FrameRate.cpp  Paths.cpp  PreferencesManager.cpp  ProgramArguments.cpp  Resource.cpp  ResourceManager.cpp  String.cpp
libraries/src/GameUtilities/Data/: AABB.cpp  CMakeLists.txt  QuadTree.cpp  Rectangle.cpp
libraries/src/GameUtilities/Engin/: Engin.cpp  GameState.cpp
libraries/src/GameUtilities/Event/: CMakeLists.txt  ChangeState.cpp  Click.cpp  Dispatcher.cpp  Event.cpp  EventHandler.cpp  EventManager.cpp  EventQueue.cpp  LogEvent.cpp  MessageEvent.cpp  MusicVolumeChanged.cpp  OnCheck.cpp  OnComboChanged.cpp  OnReturnPressed.cpp  OnReturnReleased.cpp  OnSliderChanged.cpp  OnTextChanged.cpp  PlayMusic.cpp  PlaySound.cpp  Pop.cpp  PushState.cpp  (+1 more)
test/: CMakeLists.txt
test/GameUtilities/: CMakeLists.txt
test/GameUtilities/Algorithm/: CMakeLists.txt
test/GameUtilities/Core/: CMakeLists.txt  StringTests.cpp
test/GameUtilities/Engin/: CMakeLists.txt  Engin.cpp
test/GameUtilities/EnginTests/: CMakeLists.txt  EnginTests.cpp  GameStateTests.cpp
test/GameUtilities/ParticleSystem/: CMakeLists.txt  ParticleSytemContainerTest.cpp
test/GameUtilities/TP/: CMakeLists.txt  ThreadPoolTest.cpp
(+451 files in other folders)
