#Make the GU_BUILD_DOC variable show up in the cmake gui

find_package(Doxygen REQUIRED)

#source files
set(DOXYGEN_MAINPAGE "${${PROJECT_NAME}_SOURCE_DIR}/README.MD")
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE true)
set(DOXYGEN_FILE_PATTERNS "*.h *.cpp")
set(DOXYGEN_EXCLUDE_PATTERNS " ")

#source directories
set(DOXYGEN_INCLUDE_DIR "${${PROJECT_NAME}_SOURCE_DIR}/libraries/include/")
set(DOXYGEN_SRC_DIR "${${PROJECT_NAME}_SOURCE_DIR}/libraries/src/")
set(DOXYGEN_INPUT_DIR "${DOXYGEN_INCLUDE_DIR} ${DOXYGEN_SRC_DIR} ${DOXYGEN_MAINPAGE}")

#Directories
set(DOXYGEN_EXCLUDE "${${PROJECT_NAME}_BINARY_DIR}")
set(DOXYGEN_OUTPUT_DIR ${PROJECT_BINARY_DIR}/doc)
set(DOXYGEN_RECURSIVE true)

#Doxygen warnings
set(DOXYGEN_WARNINGS "YES")
set(DOXYGEN_WARN_IF_UNDOCUMENTED "YES")
set(DOXYGEN_WARN_IF_DOC_ERROR "YES")
set(DOXYGEN_WARN_NO_PARAMDOC "YES")


#Doxygen extract
set(DOXYGEN_EXTRACT_ALL "NO")
set(DOXYGEN_EXTRACT_PRIVATE "YES")
set(DOXYGEN_EXTRACT_PACKAGE "YES")
set(DOXYGEN_EXTRACT_STATIC "YES")
set(DOXYGEN_EXTRACT_LOCAL_CLASSES "NO")
set(DOXYGEN_EXTRACT_ANON_NSPACES "YES")

#HTML documentation
set(DOXYGEN_HTML_OUTPUT_DIR "html")
set(DOXYGEN_GENERATE_HTML_OUTPUT "YES")

#RTF documentation
set(DOXYGEN_RTF_OUTPUT_DIR "rtf")
set(DOXYGEN_GENERATE_RTF_OUTPUT "NO")

#LATEX documentation
set(DOXYGEN_LATEX_OUTPUT_DIR "latex")
set(DOXYGEN_GENERATE_LATEX_OUTPUT "NO")

#XML documentation
set(DOXYGEN_XML_OUTPUT_DIR "xml")
set(DOXYGEN_GENERATE_XML_OUTPUT "NO")

#MAN page documentation
set(DOXYGEN_MAN_OUTPUT_DIR "man")
set(DOXYGEN_GENERATE_MAN_OUTPUT "NO")

#DOCBOOK documentation
set(DOXYGEN_DOCBOOK_OUTPUT_DIR "docbook")
set(DOXYGEN_GENERATE_DOCBOOK_OUTPUT "NO")



configure_file("${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in" "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile")

add_custom_target(doc ALL
                    COMMAND ${DOXYGEN_EXECUTABLE} ${Doxyfile}
                    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
                    COMMENT "Generating API documentation with Doxygen"
                    VERBATIM)


