set(FILES 	"${CMAKE_CURRENT_SOURCE_DIR}/TestState.h"
			"${CMAKE_CURRENT_SOURCE_DIR}/DebugDraw.h"
			"${CMAKE_CURRENT_SOURCE_DIR}/MouseJoint.h"
			"${CMAKE_CURRENT_SOURCE_DIR}/ConvertCoords.h"
			"${CMAKE_CURRENT_SOURCE_DIR}/ObjectBase.h"
)

set(SUB_DIRECTORIES
""
)

#Add subdirectories
foreach(LOOP_VAR ${SUB_DIRECTORIES})
    add_subdirectory("${LOOP_VAR}")
endforeach()

string(REGEX MATCH "(/|\\|\)(Box2D)(/|\\|\).*" RELATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
if(FILES)
	#Add source file to target
	target_sources(	"${PROJECT_NAME}" PRIVATE ${FILES})

	#Install source files
	install(FILES ${FILES} DESTINATION "${RELATIVE_PATH}")
endif()
