set(FILES
"${CMAKE_CURRENT_SOURCE_DIR}/Engin.h"
"${CMAKE_CURRENT_SOURCE_DIR}/GameState.h")

set(SUB_DIRECTORIES "")

#Add subdirectories
foreach(LOOP_VAR ${SUB_DIRECTORIES})
    add_subdirectory("${LOOP_VAR}")
endforeach()

string(REGEX MATCH "(/|\\|\)(include|src|test)(/|\\|\).*" RELATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
if(FILES)
	#Add source file to target
	target_sources(	"Engin" PRIVATE ${FILES})

	message("Relative path ${RELATIVE_PATH}")
	#Install source files
	install(FILES ${FILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/${RELATIVE_PATH}" COMPONENT "libs")
endif()
